Bug 155488 - Calc 7.5.x.y – Chart export as svg without title of the y-Axis
Summary: Calc 7.5.x.y – Chart export as svg without title of the y-Axis
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, filter:svg, regression
: 157295 157677 (view as bug list)
Depends on:
Blocks: Chart-Labels regression-scaled-glyph-positions
  Show dependency treegraph
 
Reported: 2023-05-25 12:37 UTC by Jörn Schwarz
Modified: 2024-10-24 19:25 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc file with xy-chart and re-imported svg file (40.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-05-25 12:43 UTC, Jörn Schwarz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jörn Schwarz 2023-05-25 12:37:44 UTC
Description:
Since version 7.5… a significant error occurs when exporting Calc charts to svg:
The title of the y-Axis is missing in the generated svg file.
Up to LO 7.4.7.2 the y-Axis was exported correctly.

Steps to Reproduce:
1. Create a chart from any X,Y data, e.g. „X-Y (Scatter)“ or „Area“.
2. Select the chart and choose "Export as Image" with the right mouse button as svg file.
3. Then import the svg file into a Writer document.


Actual Results:
The title of the y-Axis is missing.
(The titel of the x-Axis ist exported correctly).

Expected Results:
The svg chart contains the title of the y-Axis as in Calc.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Export with y-Axis
Comment 1 Jörn Schwarz 2023-05-25 12:43:27 UTC
Created attachment 187494 [details]
Calc file with xy-chart and re-imported svg file
Comment 2 stragu 2023-05-25 12:59:09 UTC
I thought this was going to be another duplicate of the already-fixed bug 153672, but I can reproduce in:

Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

as well as:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f3aab159f1c1e00c25e6b4ca1e50813bc343f4f3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

PNG export is fine.

Caolán, this issue was introduced with 1fa731d03ba0f22cb9392a578124ea977eaab2e9 but was not fixed by bd42cd1a325cd53db9fca0865f851bcd6e09ccc6 (confirmed with linux-64-7.5 repo).
Can you please have a look?
Comment 3 mxvinbox 2023-10-10 12:08:49 UTC
*** Bug 157677 has been marked as a duplicate of this bug. ***
Comment 4 stragu 2023-11-06 00:09:43 UTC
Still reproduced in recent trunk build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 31fb3045dabdb27d913712f3abcade315e3ea9bd
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 5 Caolán McNamara 2024-09-12 09:00:39 UTC
looks like the diff between working and failure in the svg output is

good:
<text class="SVGTextShape" transform="rotate(-90 825 4331)"><tspan class="TextParagraph"><tspan class="TextPosition" x="825" y="4331">

bad:

<text class="SVGTextShape" transform="rotate(-90 -4212 4065)"><tspan class="TextParagraph"><tspan class="TextPosition" x="825" y="4332">

And I think the problem is that the svg export is "peeking ahead" for text positions and that peek-ahead isn't mapmode aware
Comment 6 Jörn Schwarz 2024-09-12 09:15:58 UTC
Hello Caolán,

I don't understand that (I'm not a programmer),
but I reported the problem in May 2023 for version 7.5.2.3. 
It is still present now in version 24.8.1.2, 
and in all previous versions everything worked flawlessly. 

greetings
Jörn
Comment 7 Caolán McNamara 2024-09-12 15:37:11 UTC
yeah, the above is where the export mistake is visible in the output svg which helps me see why my original change far away from the svg export had this effect.

https://gerrit.libreoffice.org/c/core/+/173260 should fix this
Comment 8 Caolán McNamara 2024-09-12 15:42:43 UTC
*** Bug 157295 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2024-09-12 18:32:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/623eb17d6b699a280e6d096fb1be4d543cf9f064

tdf#155488 svg export "peek-ahead" didn't see MapMode changes

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2024-09-12 18:33:12 UTC
done in trunk, backports to 24-8 and 24-2 in gerrit
Comment 11 Commit Notification 2024-09-13 10:25:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/11130945d1eceea22ce3fb96579d33996482c8ad

tdf#155488 svg export "peek-ahead" didn't see MapMode changes

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-10-23 15:34:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/019cb16230e8cbd7024da97b560b87fcd50ba312

tdf#155488 svg export "peek-ahead" didn't see MapMode changes

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-10-24 19:25:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/c0ad48bb086cfddbca9774d9fd8867acc077db31

tdf#155488 svg export "peek-ahead" didn't see MapMode changes

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.