tdf#155488 svg export "peek-ahead" didn't see MapMode changes

normal 'playback' case is ok, but during the peek-ahead to get text positions
then the MapMode was skipped over so the rotate values were created with
the wrong MapMode.

Change-Id: I2b51dbc1b15e8d0d24b00b2bd4decb4c71772208
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173286
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins