filter/source/svg/svgwriter.cxx
@@ -601,6 +601,11 @@ sal_Int32 SVGTextWriter::setTextPosition(const GDIMetaFile& rMtf, size_t& nCurAc
     bool bConfigured = false;
     bool bEmpty = true;
 
+    // similar to OutputDevice::Push, but we may conditionally not restore these
+    MapMode aOrigMapMode = mpVDev->GetMapMode();
+    bool bOrigMapMapModeEnabled = mpVDev->IsMapModeEnabled();
+    int nPopsNeeded = 0;
+
     size_t nActionIndex = nCurAction + 1;
     for( ; nActionIndex < nCount; ++nActionIndex )
     {
@@ -717,6 +722,23 @@ sal_Int32 SVGTextWriter::setTextPosition(const GDIMetaFile& rMtf, size_t& nCurAc
                 }
             }
             break;
+
+            case MetaActionType::PUSH:
+                const_cast<MetaAction*>(pAction)->Execute(mpVDev);
+                ++nPopsNeeded;
+                break;
+            case MetaActionType::POP:
+                const_cast<MetaAction*>(pAction)->Execute(mpVDev);
+                --nPopsNeeded;
+                break;
+            case MetaActionType::MAPMODE:
+            {
+                // keep MapMode up to date
+                const_cast<MetaAction*>(pAction)->Execute(mpVDev);
+                break;
+            }
+            break;
+
             default: break;
         }
         if( bConfigured || bEOL || bEOP || bETS ) break;
@@ -725,13 +747,23 @@ sal_Int32 SVGTextWriter::setTextPosition(const GDIMetaFile& rMtf, size_t& nCurAc
 
     if( bEmpty )
     {
+        // If we fast-forward to this nActionIndex, then leave
+        // the OutputDevice state as it is.
         nCurAction = nActionIndex;
         return ( bEOL ? -2 : ( bEOP ? -1 : 0 ) );
     }
-    else
+
+    // If we are leaving nCurAction untouched, then restore the OutputDevice
+    // to its original state
+    while (nPopsNeeded > 0)
     {
-        return 1;
+        mpVDev->Pop();
+        --nPopsNeeded;
     }
+
+    mpVDev->SetMapMode(aOrigMapMode);
+    mpVDev->EnableMapMode(bOrigMapMapModeEnabled);
+    return 1;
 }
 
 
