filter/qa/unit/svg.cxx
@@ -341,6 +341,34 @@ CPPUNIT_TEST_FIXTURE(SvgFilterTest, testSemiTransparentTextBullet)
         0);
 }
 
+CPPUNIT_TEST_FIXTURE(SvgFilterTest, testMapModeText)
+{
+    loadFromFile(u"YAxis.odg");
+
+    // Export to SVG.
+    save(u"draw_svg_Export"_ustr);
+
+    xmlDocUniquePtr pXmlDoc = parseExportedFile();
+
+    OUString sTransform
+        = getXPath(pXmlDoc, "(//svg:text[@class='SVGTextShape'])[last()]"_ostr, "transform"_ostr);
+
+    OUString aTextPositionX
+        = getXPath(pXmlDoc, "(//svg:tspan[@class='TextPosition'])[last()]"_ostr, "x"_ostr);
+    OUString aTextPositionY
+        = getXPath(pXmlDoc, "(//svg:tspan[@class='TextPosition'])[last()]"_ostr, "y"_ostr);
+
+    OUString sExpectedTransform("rotate(-90 " + aTextPositionX + " " + aTextPositionY + ")");
+
+    // We expect the rotate point of the rotated text to match the start position of the text
+    CPPUNIT_ASSERT_EQUAL(sExpectedTransform, sTransform);
+    // Without the accompanying fix, this test would have failed with:
+    // - Expected: rotate(-90 3386 14754)
+    // - Actual  : rotate(-90 -1651 14488)
+    // Because the (local) MapMode wasn't taken into account for the text position when peeking
+    // ahead to get the rotation.
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
